--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-.png
 Untitled.png
-.idea/misc.xml
-.idea/modules.xml
-.idea/Satellite tracker reworked.iml
-.idea/inspectionProfiles/profiles_settings.xml
+.idea/
